OCP/project-allinonefile-backup.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Pod
  metadata:
    annotations:
      alpha.image.policy.openshift.io/resolve-names: '*'
      k8s.v1.cni.cncf.io/networks-status: |-
        [{
            "name": "openshift-sdn",
            "interface": "eth0",
            "ips": [
                "10.199.9.227"
            ],
            "dns": {},
            "default-route": [
                "10.199.8.1"
            ]
        }]
      openshift.io/deployment-config.latest-version: "1"
      openshift.io/deployment-config.name: notebook
      openshift.io/deployment.name: notebook-1
      openshift.io/generated-by: OpenShiftNewApp
      openshift.io/scc: restricted
    creationTimestamp: null
    generateName: notebook-1-
    labels:
      app: notebook
      deployment: notebook-1
      deploymentconfig: notebook
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: ReplicationController
      name: notebook-1
      uid: 45a1bb9f-78ce-11ea-9e60-005056ae0efa
  spec:
    automountServiceAccountToken: false
    containers:
    - command:
      - start-notebook.sh
      - --config=/etc/jupyter/openshift/jupyter_notebook_config.py
      - --no-browser
      - --ip=0.0.0.0
      env:
      - name: JUPYTER_NOTEBOOK_PASSWORD
        value: smg-corebi
      - name: JUPYTER_ENABLE_LAB
        value: "true"
      image: jupyter/datascience-notebook:latest
      imagePullPolicy: Always
      name: jupyter-notebook
      ports:
      - containerPort: 8888
        protocol: TCP
      - containerPort: 8050
        protocol: TCP
      - containerPort: 1820
        protocol: TCP
      - containerPort: 2638
        protocol: TCP
      - containerPort: 4100
        protocol: TCP
      resources: {}
      securityContext:
        capabilities:
          drop:
          - KILL
          - MKNOD
          - SETGID
          - SETUID
        runAsUser: 1000510000
      terminationMessagePath: /dev/termination-log
      terminationMessagePolicy: File
      volumeMounts:
      - mountPath: /etc/jupyter/openshift
        name: notebook-cfg
      - mountPath: /home/jovyan
        name: notebook-data
    dnsPolicy: ClusterFirst
    imagePullSecrets:
    - name: default-dockercfg-gggq2
    nodeName: atslvinfra2t.ocp-rc1.swm.com.ar
    priority: 0
    restartPolicy: Always
    schedulerName: default-scheduler
    securityContext:
      fsGroup: 1000510000
      seLinuxOptions:
        level: s0:c23,c2
      supplementalGroups:
      - 100
    serviceAccount: default
    serviceAccountName: default
    terminationGracePeriodSeconds: 30
    tolerations:
    - effect: NoExecute
      key: node.kubernetes.io/not-ready
      operator: Exists
      tolerationSeconds: 300
    - effect: NoExecute
      key: node.kubernetes.io/unreachable
      operator: Exists
      tolerationSeconds: 300
    volumes:
    - configMap:
        defaultMode: 420
        name: notebook-cfg
      name: notebook-cfg
    - name: notebook-data
      persistentVolumeClaim:
        claimName: notebook-data
  status: {}
- apiVersion: v1
  kind: Pod
  metadata:
    annotations:
      k8s.v1.cni.cncf.io/networks-status: ""
      openshift.io/deployment-config.name: notebook
      openshift.io/deployment.name: notebook-2
      openshift.io/scc: restricted
    creationTimestamp: null
    labels:
      openshift.io/deployer-pod-for.name: notebook-2
    name: notebook-2-deploy
    ownerReferences:
    - apiVersion: v1
      kind: ReplicationController
      name: notebook-2
      uid: ea668e1c-42ee-4fd1-b932-1fef6082d692
  spec:
    activeDeadlineSeconds: 21600
    containers:
    - env:
      - name: OPENSHIFT_DEPLOYMENT_NAME
        value: notebook-2
      - name: OPENSHIFT_DEPLOYMENT_NAMESPACE
        value: profiling-develop
      image: quay.io/openshift-release-dev/ocp-v4.0-art-dev@sha256:583126e5e12e31d6d25a141c17d5992a264ecc2b8c73f16808e2da7eb77e0967
      imagePullPolicy: IfNotPresent
      name: deployment
      resources: {}
      securityContext:
        capabilities:
          drop:
          - KILL
          - MKNOD
          - SETGID
          - SETUID
        runAsUser: 1000510000
      terminationMessagePath: /dev/termination-log
      terminationMessagePolicy: File
      volumeMounts:
      - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
        name: deployer-token-9s72t
        readOnly: true
    dnsPolicy: ClusterFirst
    imagePullSecrets:
    - name: deployer-dockercfg-nflfq
    nodeName: atslvworker3t.ocp-rc1.swm.com.ar
    priority: 0
    restartPolicy: Never
    schedulerName: default-scheduler
    securityContext:
      fsGroup: 1000510000
      seLinuxOptions:
        level: s0:c23,c2
    serviceAccount: deployer
    serviceAccountName: deployer
    shareProcessNamespace: false
    terminationGracePeriodSeconds: 10
    tolerations:
    - effect: NoExecute
      key: node.kubernetes.io/not-ready
      operator: Exists
      tolerationSeconds: 300
    - effect: NoExecute
      key: node.kubernetes.io/unreachable
      operator: Exists
      tolerationSeconds: 300
    volumes:
    - name: deployer-token-9s72t
      secret:
        defaultMode: 420
        secretName: deployer-token-9s72t
  status: {}
- apiVersion: v1
  kind: Pod
  metadata:
    annotations:
      k8s.v1.cni.cncf.io/networks-status: ""
      openshift.io/build.name: smg-datascience-notebook-git-1
      openshift.io/scc: privileged
    creationTimestamp: null
    labels:
      openshift.io/build.name: smg-datascience-notebook-git-1
    name: smg-datascience-notebook-git-1-build
    ownerReferences:
    - apiVersion: build.openshift.io/v1
      controller: true
      kind: Build
      name: smg-datascience-notebook-git-1
      uid: 5c4b084d-c6cb-423b-87bb-2d02f473f08b
  spec:
    containers:
    - args:
      - --loglevel=0
      command:
      - openshift-docker-build
      env:
      - name: BUILD
        value: |
          {"kind":"Build","apiVersion":"build.openshift.io/v1","metadata":{"name":"smg-datascience-notebook-git-1","namespace":"profiling-develop","selfLink":"/apis/build.openshift.io/v1/namespaces/profiling-develop/builds/smg-datascience-notebook-git-1","uid":"5c4b084d-c6cb-423b-87bb-2d02f473f08b","resourceVersion":"194153197","creationTimestamp":"2020-06-08T15:29:19Z","labels":{"app":"smg-datascience-notebook-git","app.kubernetes.io/component":"smg-datascience-notebook-git","app.kubernetes.io/ [...]
      - name: LANG
        value: en_US.utf8
      - name: SOURCE_REPOSITORY
        value: https://github.com/MROrellana/SMG-datascience-notebook.git
      - name: SOURCE_URI
        value: https://github.com/MROrellana/SMG-datascience-notebook.git
      - name: SOURCE_CONTEXT_DIR
        value: /
      - name: PUSH_DOCKERCFG_PATH
        value: /var/run/secrets/openshift.io/push
      - name: PULL_DOCKERCFG_PATH
        value: /var/run/secrets/openshift.io/pull
      - name: BUILD_REGISTRIES_CONF_PATH
        value: /var/run/configs/openshift.io/build-system/registries.conf
      - name: BUILD_REGISTRIES_DIR_PATH
        value: /var/run/configs/openshift.io/build-system/registries.d
      - name: BUILD_SIGNATURE_POLICY_PATH
        value: /var/run/configs/openshift.io/build-system/policy.json
      - name: BUILD_STORAGE_CONF_PATH
        value: /var/run/configs/openshift.io/build-system/storage.conf
      - name: BUILD_STORAGE_DRIVER
        value: overlay
      - name: BUILD_ISOLATION
        value: chroot
      - name: BUILD_BLOBCACHE_DIR
        value: /var/cache/blobs
      - name: HTTP_PROXY
      - name: HTTPS_PROXY
      - name: NO_PROXY
      image: quay.io/openshift-release-dev/ocp-v4.0-art-dev@sha256:cb3f60a96cf5aa87db24dac169b580fcb7752c40ca5fad87e6131a49ed5009cc
      imagePullPolicy: IfNotPresent
      name: docker-build
      resources: {}
      securityContext:
        privileged: true
      terminationMessagePath: /dev/termination-log
      terminationMessagePolicy: FallbackToLogsOnError
      volumeMounts:
      - mountPath: /tmp/build
        name: buildworkdir
      - mountPath: /var/lib/containers/cache
        name: buildcachedir
      - mountPath: /var/run/secrets/openshift.io/push
        name: builder-dockercfg-plbfj-push
        readOnly: true
      - mountPath: /var/run/secrets/openshift.io/pull
        name: builder-dockercfg-plbfj-pull
        readOnly: true
      - mountPath: /var/run/configs/openshift.io/build-system
        name: build-system-configs
        readOnly: true
      - mountPath: /var/run/configs/openshift.io/certs
        name: build-ca-bundles
      - mountPath: /etc/pki/ca-trust/extracted/pem
        name: build-proxy-ca-bundles
      - mountPath: /var/lib/containers/storage
        name: container-storage-root
      - mountPath: /var/cache/blobs
        name: build-blob-cache
      - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
        name: builder-token-brqv8
        readOnly: true
    dnsPolicy: ClusterFirst
    imagePullSecrets:
    - name: builder-dockercfg-plbfj
    initContainers:
    - args:
      - --loglevel=0
      command:
      - openshift-git-clone
      env:
      - name: BUILD
        value: |
          {"kind":"Build","apiVersion":"build.openshift.io/v1","metadata":{"name":"smg-datascience-notebook-git-1","namespace":"profiling-develop","selfLink":"/apis/build.openshift.io/v1/namespaces/profiling-develop/builds/smg-datascience-notebook-git-1","uid":"5c4b084d-c6cb-423b-87bb-2d02f473f08b","resourceVersion":"194153197","creationTimestamp":"2020-06-08T15:29:19Z","labels":{"app":"smg-datascience-notebook-git","app.kubernetes.io/component":"smg-datascience-notebook-git","app.kubernetes.io/ [...]
      - name: LANG
        value: en_US.utf8
      - name: SOURCE_REPOSITORY
        value: https://github.com/MROrellana/SMG-datascience-notebook.git
      - name: SOURCE_URI
        value: https://github.com/MROrellana/SMG-datascience-notebook.git
      - name: SOURCE_CONTEXT_DIR
        value: /
      - name: BUILD_REGISTRIES_CONF_PATH
        value: /var/run/configs/openshift.io/build-system/registries.conf
      - name: BUILD_REGISTRIES_DIR_PATH
        value: /var/run/configs/openshift.io/build-system/registries.d
      - name: BUILD_SIGNATURE_POLICY_PATH
        value: /var/run/configs/openshift.io/build-system/policy.json
      - name: BUILD_STORAGE_CONF_PATH
        value: /var/run/configs/openshift.io/build-system/storage.conf
      - name: BUILD_BLOBCACHE_DIR
        value: /var/cache/blobs
      - name: HTTP_PROXY
      - name: HTTPS_PROXY
      - name: NO_PROXY
      image: quay.io/openshift-release-dev/ocp-v4.0-art-dev@sha256:cb3f60a96cf5aa87db24dac169b580fcb7752c40ca5fad87e6131a49ed5009cc
      imagePullPolicy: IfNotPresent
      name: git-clone
      resources: {}
      terminationMessagePath: /dev/termination-log
      terminationMessagePolicy: FallbackToLogsOnError
      volumeMounts:
      - mountPath: /tmp/build
        name: buildworkdir
      - mountPath: /var/run/configs/openshift.io/build-system
        name: build-system-configs
        readOnly: true
      - mountPath: /var/run/configs/openshift.io/certs
        name: build-ca-bundles
      - mountPath: /etc/pki/ca-trust/extracted/pem
        name: build-proxy-ca-bundles
      - mountPath: /var/cache/blobs
        name: build-blob-cache
      - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
        name: builder-token-brqv8
        readOnly: true
    - args:
      - --loglevel=0
      command:
      - openshift-manage-dockerfile
      env:
      - name: BUILD
        value: |
          {"kind":"Build","apiVersion":"build.openshift.io/v1","metadata":{"name":"smg-datascience-notebook-git-1","namespace":"profiling-develop","selfLink":"/apis/build.openshift.io/v1/namespaces/profiling-develop/builds/smg-datascience-notebook-git-1","uid":"5c4b084d-c6cb-423b-87bb-2d02f473f08b","resourceVersion":"194153197","creationTimestamp":"2020-06-08T15:29:19Z","labels":{"app":"smg-datascience-notebook-git","app.kubernetes.io/component":"smg-datascience-notebook-git","app.kubernetes.io/ [...]
      - name: LANG
        value: en_US.utf8
      - name: SOURCE_REPOSITORY
        value: https://github.com/MROrellana/SMG-datascience-notebook.git
      - name: SOURCE_URI
        value: https://github.com/MROrellana/SMG-datascience-notebook.git
      - name: SOURCE_CONTEXT_DIR
        value: /
      - name: BUILD_REGISTRIES_CONF_PATH
        value: /var/run/configs/openshift.io/build-system/registries.conf
      - name: BUILD_REGISTRIES_DIR_PATH
        value: /var/run/configs/openshift.io/build-system/registries.d
      - name: BUILD_SIGNATURE_POLICY_PATH
        value: /var/run/configs/openshift.io/build-system/policy.json
      - name: BUILD_STORAGE_CONF_PATH
        value: /var/run/configs/openshift.io/build-system/storage.conf
      - name: BUILD_BLOBCACHE_DIR
        value: /var/cache/blobs
      - name: HTTP_PROXY
      - name: HTTPS_PROXY
      - name: NO_PROXY
      image: quay.io/openshift-release-dev/ocp-v4.0-art-dev@sha256:cb3f60a96cf5aa87db24dac169b580fcb7752c40ca5fad87e6131a49ed5009cc
      imagePullPolicy: IfNotPresent
      name: manage-dockerfile
      resources: {}
      terminationMessagePath: /dev/termination-log
      terminationMessagePolicy: FallbackToLogsOnError
      volumeMounts:
      - mountPath: /tmp/build
        name: buildworkdir
      - mountPath: /var/run/configs/openshift.io/build-system
        name: build-system-configs
        readOnly: true
      - mountPath: /var/run/configs/openshift.io/certs
        name: build-ca-bundles
      - mountPath: /etc/pki/ca-trust/extracted/pem
        name: build-proxy-ca-bundles
      - mountPath: /var/cache/blobs
        name: build-blob-cache
      - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
        name: builder-token-brqv8
        readOnly: true
    nodeName: atslvworker3t.ocp-rc1.swm.com.ar
    nodeSelector:
      kubernetes.io/os: linux
    priority: 0
    restartPolicy: Never
    schedulerName: default-scheduler
    securityContext: {}
    serviceAccount: builder
    serviceAccountName: builder
    terminationGracePeriodSeconds: 30
    tolerations:
    - effect: NoExecute
      key: node.kubernetes.io/not-ready
      operator: Exists
      tolerationSeconds: 300
    - effect: NoExecute
      key: node.kubernetes.io/unreachable
      operator: Exists
      tolerationSeconds: 300
    volumes:
    - hostPath:
        path: /var/lib/containers/cache
        type: ""
      name: buildcachedir
    - emptyDir: {}
      name: buildworkdir
    - name: builder-dockercfg-plbfj-push
      secret:
        defaultMode: 384
        secretName: builder-dockercfg-plbfj
    - name: builder-dockercfg-plbfj-pull
      secret:
        defaultMode: 384
        secretName: builder-dockercfg-plbfj
    - configMap:
        defaultMode: 420
        name: smg-datascience-notebook-git-1-sys-config
      name: build-system-configs
    - configMap:
        defaultMode: 420
        items:
        - key: service-ca.crt
          path: certs.d/image-registry.openshift-image-registry.svc:5000/ca.crt
        - key: smg-devtools-docker.swm.com.ar.8482
          path: certs.d/smg-devtools-docker.swm.com.ar.8482/ca.crt
        name: smg-datascience-notebook-git-1-ca
      name: build-ca-bundles
    - configMap:
        defaultMode: 420
        items:
        - key: ca-bundle.crt
          path: tls-ca-bundle.pem
        name: smg-datascience-notebook-git-1-global-ca
      name: build-proxy-ca-bundles
    - emptyDir: {}
      name: container-storage-root
    - emptyDir: {}
      name: build-blob-cache
    - name: builder-token-brqv8
      secret:
        defaultMode: 420
        secretName: builder-token-brqv8
  status: {}
- apiVersion: v1
  kind: ReplicationController
  metadata:
    annotations:
      openshift.io/deployer-pod.completed-at: 2020-04-07 12:50:27 +0000 UTC
      openshift.io/deployer-pod.created-at: 2020-04-07 12:49:51 +0000 UTC
      openshift.io/deployer-pod.name: notebook-1-deploy
      openshift.io/deployment-config.latest-version: "1"
      openshift.io/deployment-config.name: notebook
      openshift.io/deployment.phase: Complete
      openshift.io/deployment.replicas: "1"
      openshift.io/deployment.status-reason: config change
      openshift.io/encoded-deployment-config: |
        {"kind":"DeploymentConfig","apiVersion":"apps.openshift.io/v1","metadata":{"name":"notebook","namespace":"profiling-develop","selfLink":"/apis/apps.openshift.io/v1/namespaces/profiling-develop/deploymentconfigs/notebook","uid":"455f282f-78ce-11ea-8178-0a580ac70c05","resourceVersion":"146001273","generation":1,"creationTimestamp":"2020-04-07T12:49:51Z","labels":{"app":"notebook"},"annotations":{"openshift.io/generated-by":"OpenShiftNewApp"}},"spec":{"strategy":{"type":"Recreate","recreate [...]
    creationTimestamp: null
    generation: 4
    labels:
      app: notebook
      openshift.io/deployment-config.name: notebook
    name: notebook-1
    ownerReferences:
    - apiVersion: apps.openshift.io/v1
      blockOwnerDeletion: true
      controller: true
      kind: DeploymentConfig
      name: notebook
      uid: 455f282f-78ce-11ea-8178-0a580ac70c05
  spec:
    replicas: 1
    selector:
      app: notebook
      deployment: notebook-1
      deploymentconfig: notebook
    template:
      metadata:
        annotations:
          alpha.image.policy.openshift.io/resolve-names: '*'
          openshift.io/deployment-config.latest-version: "1"
          openshift.io/deployment-config.name: notebook
          openshift.io/deployment.name: notebook-1
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          app: notebook
          deployment: notebook-1
          deploymentconfig: notebook
      spec:
        automountServiceAccountToken: false
        containers:
        - command:
          - start-notebook.sh
          - --config=/etc/jupyter/openshift/jupyter_notebook_config.py
          - --no-browser
          - --ip=0.0.0.0
          env:
          - name: JUPYTER_NOTEBOOK_PASSWORD
            value: smg-corebi
          - name: JUPYTER_ENABLE_LAB
            value: "true"
          image: jupyter/datascience-notebook:latest
          imagePullPolicy: Always
          name: jupyter-notebook
          ports:
          - containerPort: 8888
            protocol: TCP
          - containerPort: 8050
            protocol: TCP
          - containerPort: 1820
            protocol: TCP
          - containerPort: 2638
            protocol: TCP
          - containerPort: 4100
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /etc/jupyter/openshift
            name: notebook-cfg
          - mountPath: /home/jovyan
            name: notebook-data
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext:
          supplementalGroups:
          - 100
        terminationGracePeriodSeconds: 30
        volumes:
        - configMap:
            defaultMode: 420
            name: notebook-cfg
          name: notebook-cfg
        - name: notebook-data
          persistentVolumeClaim:
            claimName: notebook-data
  status:
    replicas: 0
- apiVersion: v1
  kind: ReplicationController
  metadata:
    annotations:
      kubectl.kubernetes.io/desired-replicas: "1"
      openshift.io/deployer-pod.completed-at: 2020-06-08 15:26:31 +0000 UTC
      openshift.io/deployer-pod.created-at: 2020-06-08 15:15:54 +0000 UTC
      openshift.io/deployer-pod.name: notebook-2-deploy
      openshift.io/deployment-config.latest-version: "2"
      openshift.io/deployment-config.name: notebook
      openshift.io/deployment.phase: Failed
      openshift.io/deployment.replicas: "0"
      openshift.io/deployment.status-reason: config change
      openshift.io/encoded-deployment-config: |
        {"kind":"DeploymentConfig","apiVersion":"apps.openshift.io/v1","metadata":{"name":"notebook","namespace":"profiling-develop","selfLink":"/apis/apps.openshift.io/v1/namespaces/profiling-develop/deploymentconfigs/notebook","uid":"455f282f-78ce-11ea-8178-0a580ac70c05","resourceVersion":"194142992","generation":2,"creationTimestamp":"2020-04-07T12:49:51Z","labels":{"app":"notebook"},"annotations":{"openshift.io/generated-by":"OpenShiftNewApp"}},"spec":{"strategy":{"type":"Recreate","recreate [...]
    creationTimestamp: null
    generation: 3
    labels:
      app: notebook
      openshift.io/deployment-config.name: notebook
    name: notebook-2
    ownerReferences:
    - apiVersion: apps.openshift.io/v1
      blockOwnerDeletion: true
      controller: true
      kind: DeploymentConfig
      name: notebook
      uid: 455f282f-78ce-11ea-8178-0a580ac70c05
  spec:
    replicas: 0
    selector:
      app: notebook
      deployment: notebook-2
      deploymentconfig: notebook
    template:
      metadata:
        annotations:
          alpha.image.policy.openshift.io/resolve-names: '*'
          openshift.io/deployment-config.latest-version: "2"
          openshift.io/deployment-config.name: notebook
          openshift.io/deployment.name: notebook-2
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          app: notebook
          deployment: notebook-2
          deploymentconfig: notebook
      spec:
        automountServiceAccountToken: false
        containers:
        - command:
          - start-notebook.sh
          - --config=/etc/jupyter/openshift/jupyter_notebook_config.py
          - --no-browser
          - --ip=0.0.0.0
          env:
          - name: JUPYTER_NOTEBOOK_PASSWORD
            value: smg-corebi
          - name: JUPYTER_ENABLE_LAB
            value: "true"
          image: smg-datascience-notebook-base:latest
          imagePullPolicy: Always
          name: jupyter-notebook
          ports:
          - containerPort: 8888
            protocol: TCP
          - containerPort: 8050
            protocol: TCP
          - containerPort: 1820
            protocol: TCP
          - containerPort: 2638
            protocol: TCP
          - containerPort: 4100
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /etc/jupyter/openshift
            name: notebook-cfg
          - mountPath: /home/jovyan
            name: notebook-data
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext:
          supplementalGroups:
          - 100
        terminationGracePeriodSeconds: 30
        volumes:
        - configMap:
            defaultMode: 420
            name: notebook-cfg
          name: notebook-cfg
        - name: notebook-data
          persistentVolumeClaim:
            claimName: notebook-data
  status:
    replicas: 0
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: notebook-dashboard
    name: notebook-dashboard
  spec:
    ports:
    - name: 8050-tcp
      port: 8050
      protocol: TCP
      targetPort: 8050
    selector:
      app: notebook
      deploymentconfig: notebook
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: notebook-jupyter
    name: notebook-jupyter
  spec:
    ports:
    - name: 8888-tcp
      port: 8888
      protocol: TCP
      targetPort: 8888
    selector:
      app: notebook
      deploymentconfig: notebook
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
    creationTimestamp: null
    labels:
      app: smg-datascience-notebook-base
      app.kubernetes.io/component: smg-datascience-notebook-base
      app.kubernetes.io/instance: smg-datascience-notebook-base
      app.kubernetes.io/name: ""
      app.kubernetes.io/part-of: smg-datascience-notebook-base-app
      app.openshift.io/runtime: ""
    name: smg-datascience-notebook-base
  spec:
    ports:
    - name: 8888-tcp
      port: 8888
      protocol: TCP
      targetPort: 8888
    selector:
      app: smg-datascience-notebook-base
      deploymentconfig: smg-datascience-notebook-base
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      app.openshift.io/vcs-ref: master
      app.openshift.io/vcs-uri: https://github.com/MROrellana/SMG-datascience-notebook.git
    creationTimestamp: null
    labels:
      app: smg-datascience-notebook-git
      app.kubernetes.io/component: smg-datascience-notebook-git
      app.kubernetes.io/instance: smg-datascience-notebook-git
      app.kubernetes.io/part-of: smg-datascience-notebook-git-app
    name: smg-datascience-notebook-git
  spec:
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      app: smg-datascience-notebook-git
      deploymentconfig: smg-datascience-notebook-git
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    generation: 2
    labels:
      app: notebook
    name: notebook
  spec:
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      app: notebook
      deploymentconfig: notebook
    strategy:
      activeDeadlineSeconds: 21600
      recreateParams:
        timeoutSeconds: 600
      resources: {}
      type: Recreate
    template:
      metadata:
        annotations:
          alpha.image.policy.openshift.io/resolve-names: '*'
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          app: notebook
          deploymentconfig: notebook
      spec:
        automountServiceAccountToken: false
        containers:
        - command:
          - start-notebook.sh
          - --config=/etc/jupyter/openshift/jupyter_notebook_config.py
          - --no-browser
          - --ip=0.0.0.0
          env:
          - name: JUPYTER_NOTEBOOK_PASSWORD
            value: smg-corebi
          - name: JUPYTER_ENABLE_LAB
            value: "true"
          image: smg-datascience-notebook-base:latest
          imagePullPolicy: Always
          name: jupyter-notebook
          ports:
          - containerPort: 8888
            protocol: TCP
          - containerPort: 8050
            protocol: TCP
          - containerPort: 1820
            protocol: TCP
          - containerPort: 2638
            protocol: TCP
          - containerPort: 4100
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /etc/jupyter/openshift
            name: notebook-cfg
          - mountPath: /home/jovyan
            name: notebook-data
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext:
          supplementalGroups:
          - 100
        terminationGracePeriodSeconds: 30
        volumes:
        - configMap:
            defaultMode: 420
            name: notebook-cfg
          name: notebook-cfg
        - name: notebook-data
          persistentVolumeClaim:
            claimName: notebook-data
    test: false
    triggers:
    - type: ConfigChange
  status:
    availableReplicas: 0
    latestVersion: 0
    observedGeneration: 0
    replicas: 0
    unavailableReplicas: 0
    updatedReplicas: 0
- apiVersion: build.openshift.io/v1
  kind: BuildConfig
  metadata:
    annotations:
      app.openshift.io/vcs-ref: master
      app.openshift.io/vcs-uri: https://github.com/MROrellana/SMG-datascience-notebook.git
    creationTimestamp: null
    labels:
      app: smg-datascience-notebook-git
      app.kubernetes.io/component: smg-datascience-notebook-git
      app.kubernetes.io/instance: smg-datascience-notebook-git
      app.kubernetes.io/part-of: smg-datascience-notebook-git-app
    name: smg-datascience-notebook-git
  spec:
    failedBuildsHistoryLimit: 5
    nodeSelector: null
    output:
      to:
        kind: ImageStreamTag
        name: smg-datascience-notebook-git:latest
    postCommit: {}
    resources: {}
    runPolicy: Serial
    source:
      contextDir: /
      git:
        uri: https://github.com/MROrellana/SMG-datascience-notebook.git
      type: Git
    strategy:
      dockerStrategy:
        dockerfilePath: Dockerfile
      type: Docker
    successfulBuildsHistoryLimit: 5
    triggers:
    - generic:
        secretReference:
          name: smg-datascience-notebook-git-generic-webhook-secret
      type: Generic
    - github:
        secretReference:
          name: smg-datascience-notebook-git-github-webhook-secret
      type: GitHub
    - type: ConfigChange
  status:
    lastVersion: 0
- apiVersion: build.openshift.io/v1
  kind: Build
  metadata:
    annotations:
      openshift.io/build-config.name: smg-datascience-notebook-git
      openshift.io/build.number: "1"
      openshift.io/build.pod-name: smg-datascience-notebook-git-1-build
    creationTimestamp: null
    labels:
      app: smg-datascience-notebook-git
      app.kubernetes.io/component: smg-datascience-notebook-git
      app.kubernetes.io/instance: smg-datascience-notebook-git
      app.kubernetes.io/part-of: smg-datascience-notebook-git-app
      buildconfig: smg-datascience-notebook-git
      openshift.io/build-config.name: smg-datascience-notebook-git
      openshift.io/build.start-policy: Serial
    name: smg-datascience-notebook-git-1
    ownerReferences:
    - apiVersion: build.openshift.io/v1
      controller: true
      kind: BuildConfig
      name: smg-datascience-notebook-git
      uid: c05c5cc5-69a5-49b8-b58f-e48e8040d081
  spec:
    nodeSelector: null
    output:
      pushSecret:
        name: builder-dockercfg-plbfj
      to:
        kind: ImageStreamTag
        name: smg-datascience-notebook-git:latest
    postCommit: {}
    resources: {}
    revision:
      git:
        author:
          email: marcos.r.orellana@gmail.com
          name: Marcos Orellana
        commit: c11fbe07b6673c78a49a05f272a9ff155a8fbe15
        committer:
          email: marcos.r.orellana@gmail.com
          name: Marcos Orellana
        message: Add libs.
      type: Git
    serviceAccount: builder
    source:
      contextDir: /
      git:
        uri: https://github.com/MROrellana/SMG-datascience-notebook.git
      type: Git
    strategy:
      dockerStrategy:
        dockerfilePath: Dockerfile
      type: Docker
    triggeredBy:
    - message: Build configuration change
  status:
    config:
      name: smg-datascience-notebook-git
    output:
      to:
        imageDigest: sha256:f306e1e6e493e77cad34749675cb398246a23ad11af3632c32b564c0a35ae6c8
    outputDockerImageReference: image-registry.openshift-image-registry.svc:5000/profiling-develop/smg-datascience-notebook-git:latest
    phase: New
    stages:
    - durationMilliseconds: 1813
      name: FetchInputs
      startTime: 2020-06-08T15:29:28Z
      steps:
      - durationMilliseconds: 1813
        name: FetchGitSource
        startTime: 2020-06-08T15:29:28Z
    - durationMilliseconds: 144616
      name: PullImages
      startTime: 2020-06-08T15:29:31Z
      steps:
      - durationMilliseconds: 144616
        name: PullBaseImage
        startTime: 2020-06-08T15:29:31Z
    - durationMilliseconds: 1529411
      name: Build
      startTime: 2020-06-08T15:31:56Z
      steps:
      - durationMilliseconds: 1529411
        name: DockerBuild
        startTime: 2020-06-08T15:31:56Z
    - durationMilliseconds: 51785
      name: PushImage
      startTime: 2020-06-08T15:57:25Z
      steps:
      - durationMilliseconds: 51785
        name: PushDockerImage
        startTime: 2020-06-08T15:57:25Z
- apiVersion: image.openshift.io/v1
  kind: ImageStream
  metadata:
    annotations:
      app.openshift.io/vcs-ref: master
      app.openshift.io/vcs-uri: https://github.com/MROrellana/SMG-datascience-notebook.git
    creationTimestamp: null
    generation: 1
    labels:
      app: smg-datascience-notebook-git
      app.kubernetes.io/component: smg-datascience-notebook-git
      app.kubernetes.io/instance: smg-datascience-notebook-git
      app.kubernetes.io/part-of: smg-datascience-notebook-git-app
    name: smg-datascience-notebook-git
  spec:
    lookupPolicy:
      local: false
    tags:
    - annotations: null
      from:
        kind: DockerImage
        name: image-registry.openshift-image-registry.svc:5000/profiling-develop/smg-datascience-notebook-git:latest
      generation: null
      importPolicy: {}
      name: latest
      referencePolicy:
        type: ""
  status:
    dockerImageRepository: ""
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      haproxy.router.openshift.io/timeout: 10m
      openshift.io/generated-by: OpenShiftNewApp
      openshift.io/host.generated: "true"
    creationTimestamp: null
    labels:
      app: notebook-dashboard
    name: notebook-dashboard
  spec:
    host: notebook-dashboard-profiling-develop.apps.ocp-rc1.swm.com.ar
    port:
      targetPort: 8050-tcp
    tls:
      insecureEdgeTerminationPolicy: Redirect
      termination: edge
    to:
      kind: Service
      name: notebook-dashboard
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: 2020-04-07T12:49:51Z
        status: "True"
        type: Admitted
      host: notebook-dashboard-profiling-develop.apps.ocp-rc1.swm.com.ar
      routerCanonicalHostname: apps.ocp-rc1.swm.com.ar
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      haproxy.router.openshift.io/timeout: 10m
      openshift.io/generated-by: OpenShiftNewApp
      openshift.io/host.generated: "true"
    creationTimestamp: null
    labels:
      app: notebook-jupyter
    name: notebook-jupyter
  spec:
    host: notebook-jupyter-profiling-develop.apps.ocp-rc1.swm.com.ar
    port:
      targetPort: 8888-tcp
    tls:
      insecureEdgeTerminationPolicy: Redirect
      termination: edge
    to:
      kind: Service
      name: notebook-jupyter
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: 2020-04-07T12:49:51Z
        status: "True"
        type: Admitted
      host: notebook-jupyter-profiling-develop.apps.ocp-rc1.swm.com.ar
      routerCanonicalHostname: apps.ocp-rc1.swm.com.ar
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: null
    labels:
      app: smg-datascience-notebook-git
      app.kubernetes.io/component: smg-datascience-notebook-git
      app.kubernetes.io/instance: smg-datascience-notebook-git
      app.kubernetes.io/part-of: smg-datascience-notebook-git-app
    name: smg-datascience-notebook-git
  spec:
    host: smg-datascience-notebook-git-profiling-develop.apps.ocp-rc1.swm.com.ar
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: smg-datascience-notebook-git
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: 2020-06-08T15:29:19Z
        status: "True"
        type: Admitted
      host: smg-datascience-notebook-git-profiling-develop.apps.ocp-rc1.swm.com.ar
      routerCanonicalHostname: apps.ocp-rc1.swm.com.ar
      routerName: default
      wildcardPolicy: None
kind: List
metadata: {}
